--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     </header>
     <main>
       <!-- Герой -->
-      <section class="hero footer-bg">
+      <section class="hero">
+        <!--   class="footer-bg"    -->
         <div class="hero-box">
           <!-- Ссылка на фото для хэдера -->
           <h1 class="hero-title">
