--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       <section class="advant-section">
         <div class="container">
           <ul class="advatn">
+            <h2 class="visually-hidden">Преимущества</h2>
             <li class="advant-list">
               <img
                 src="./images/antenna.svg"
