--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
             <a
               href="mailto:info@devstudio.com"
               class="contacts nav-font hover-text"
-              ><img
-                src="./images/envelope.svg"
-                alt="e-mail"
-              />info@devstudio.com</a
-            >
+              ><svg class="decoration">
+                <use
+                  href="./images/symbol-defs-optimized.svg#icon-envelope"
+                ></use>
+              </svg>
+              <span>info@devstudio.com</span>
+            </a>
           </li>
           <li>
             <a href="tel:+380961111111" class="contacts nav-font hover-text"
