Add icon SVG  envelope в хедере

--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
               href="mailto:info@devstudio.com"
               class="contacts nav-font hover-text"
               ><svg class="decoration">
-                <use
-                  href="./images/symbol-defs-optimized.svg#icon-envelope"
-                ></use>
+                <use href="./images/sprite.svg#icon-envelope"></use>
               </svg>
               <span>info@devstudio.com</span>
             </a>
