Add new sprite svg

--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
               href="mailto:info@devstudio.com"
               class="contacts nav-font hover-text"
               ><svg class="decoration">
-                <use href="./images/sprite.svg#icon-envelope"></use>
+                <use href="./images/sprite-opt.svg#icon-envelope"></use>
               </svg>
               <span>info@devstudio.com</span>
             </a>
           </li>
           <li>
             <a href="tel:+380961111111" class="contacts nav-font hover-text"
-              ><img src="./images/phone.svg" alt="mobile" />+38 096 111 11 11</a
-            >
+              ><svg class="decoration">
+                <use href="./images/smartphone.html"></use>
+              </svg>
+              <span>+38 096 111 11 11</span>
+            </a>
           </li>
         </ul>
       </div>
