--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li>
             <a href="tel:+380961111111" class="contacts nav-font hover-text"
               ><svg class="decoration">
-                <use href="./images/smartphone.html"></use>
+                <use href="./images/sprite-opt.svg#icon-smartphone"></use>
               </svg>
               <span>+38 096 111 11 11</span>
             </a>
