Add SVG иконки - Преимущества

--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@
       <!-- блок Преимущества -->
       <section class="advant-section">
         <div class="container">
+          <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advatn">
-            <h2 class="visually-hidden">Преимущества</h2>
             <li class="advant-list">
-              <img
-                src="./images/antenna.svg"
-                alt="img_antenna_1"
-                class="icon-svg"
-              />
+              <svg class="advant-svg" width="270px" height="120px">
+                <use href="./images/sprite-opt.svg#icon-antenna"></use>
+              </svg>
+
               <h3 class="logo title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="text-advetages">
                 Идейные соображения, а также начало повседневной работы по
@@ -92,7 +91,9 @@
               </p>
             </li>
             <li class="advant-list">
-              <img src="./images/clock.svg" alt="img_clock" class="icon-svg" />
+              <svg class="advant-svg" width="270px" height="120px">
+                <use href="./images/sprite-opt.svg#icon-clock"></use>
+              </svg>
               <h3 class="logo title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="text-advetages">
                 Задача организации, в особенности же рамки и место обучения
@@ -100,11 +101,9 @@
               </p>
             </li>
             <li class="advant-list">
-              <img
-                src="./images/Computer.svg"
-                alt="img_computer"
-                class="icon-svg"
-              />
+              <svg class="advant-svg" width="270px" height="120px">
+                <use href="./images/sprite-opt.svg#icon-computer"></use>
+              </svg>
               <h3 class="logo title">ПЛАНИРОВАНИЕ</h3>
               <p class="text-advetages">
                 Равным образом консультация с широким активом в значительной
@@ -112,11 +111,9 @@
               </p>
             </li>
             <li class="advant-list">
-              <img
-                src="./images/astronaut.svg"
-                alt="img_astronaut"
-                class="icon-svg"
-              />
+              <svg class="advant-svg" width="270px" height="120px">
+                <use href="./images/sprite-opt.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="logo title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="text-advetages">
                 Значимость этих проблем настолько очевидна, что реализация
