Add hover всем иконкам SVG Наша команда

--- a/index.html
+++ b/index.html
@@ -238,29 +238,51 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                     class="social-links"
-                    >Instagram</a
                   >
+                    <svg class="team-links" width="44px" height="44px">
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-instagram"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
                   <a href="" aria-label="Ссылка на Twitter" class="social-links"
-                    >Twitter</a
-                  >
+                    ><svg class="team-links" width="44px" height="44px">
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-twitter"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
                   <a
                     href=""
                     aria-label="Ссылка на Facebook"
                     class="social-links"
-                    >Facebook</a
-                  >
+                    ><svg
+                      class="team-links facebook"
+                      width="44px"
+                      height="44px"
+                    >
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-facebook"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
                   <a
                     href=""
                     aria-label="Ссылка на LinkedIn"
                     class="social-links"
-                    >LinkedIn</a
                   >
+                    <svg class="team-links" width="44px" height="44px">
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -278,29 +300,51 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                     class="social-links"
-                    >Instagram</a
                   >
+                    <svg class="team-links" width="44px" height="44px">
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-instagram"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
                   <a href="" aria-label="Ссылка на Twitter" class="social-links"
-                    >Twitter</a
-                  >
+                    ><svg class="team-links" width="44px" height="44px">
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-twitter"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
                   <a
                     href=""
                     aria-label="Ссылка на Facebook"
                     class="social-links"
-                    >Facebook</a
-                  >
+                    ><svg
+                      class="team-links facebook"
+                      width="44px"
+                      height="44px"
+                    >
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-facebook"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
                   <a
                     href=""
                     aria-label="Ссылка на LinkedIn"
                     class="social-links"
-                    >LinkedIn</a
                   >
+                    <svg class="team-links" width="44px" height="44px">
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -318,29 +362,51 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                     class="social-links"
-                    >Instagram</a
                   >
+                    <svg class="team-links" width="44px" height="44px">
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-instagram"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
                   <a href="" aria-label="Ссылка на Twitter" class="social-links"
-                    >Twitter</a
-                  >
+                    ><svg class="team-links" width="44px" height="44px">
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-twitter"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
                   <a
                     href=""
                     aria-label="Ссылка на Facebook"
                     class="social-links"
-                    >Facebook</a
-                  >
+                    ><svg
+                      class="team-links facebook"
+                      width="44px"
+                      height="44px"
+                    >
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-facebook"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
                   <a
                     href=""
                     aria-label="Ссылка на LinkedIn"
                     class="social-links"
-                    >LinkedIn</a
                   >
+                    <svg class="team-links" width="44px" height="44px">
+                      <use
+                        href="./images/sprite-opt.svg#icon-team-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
