--- a/index.html
+++ b/index.html
@@ -420,33 +420,45 @@
           <ul class="compani-list">
             <li class="clients-list">
               <a href=""
-                ><img src="./images/company_logo_1.svg" alt="Компания 1"
-              /></a>
+                ><svg class="icon-client company-1" width="44" height="45">
+                  <use href="./images/sprite-opt.svg#icon-company_logo_1"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list">
               <a href=""
-                ><img src="./images/company_logo_1.svg" alt="Компания 2"
-              /></a>
+                ><svg class="icon-client company-2" width="40" height="52">
+                  <use href="./images/sprite-opt.svg#icon-company_logo_2"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list">
               <a href=""
-                ><img src="./images/company_logo_1.svg" alt="Компания 3"
-              /></a>
+                ><svg class="icon-client company-3" width="41" height="43">
+                  <use href="./images/sprite-opt.svg#icon-company_logo_3"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list">
               <a href=""
-                ><img src="./images/company_logo_1.svg" alt="Компания 4"
-              /></a>
+                ><svg class="icon-client company-4" width="170" height="90">
+                  <use href="./images/sprite-opt.svg#icon-company_logo_4"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list">
               <a href=""
-                ><img src="./images/company_logo_1.svg" alt="Компания 5"
-              /></a>
+                ><svg class="icon-client company-5" width="170px" height="90px">
+                  <use href="./images/sprite-opt.svg#icon-company_logo_5"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list">
               <a href=""
-                ><img src="./images/company_logo_1.svg" alt="Компания 6"
-              /></a>
+                ><svg class="icon-client company-6" width="88" height="45">
+                  <use href="./images/sprite-opt.svg#icon-company_logo_6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
