Add иконки соцсетей SVG в футер

--- a/index.html
+++ b/index.html
@@ -511,32 +511,46 @@
                 href=""
                 aria-label=" Ссылка на Instagram"
                 class="footerSocialLinks"
-                >Instagram</a
-              >
+                ><svg class="footer-icons" width="20" height="20">
+                  <use
+                    href="./images/sprite-opt.svg#icon-footer-instagram"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-social-list">
               <a
                 href=""
                 aria-label=" Ссылка на Twitter"
                 class="footerSocialLinks"
-                >Twitter</a
-              >
+                ><svg class="footer-icons" width="20" height="20">
+                  <use href="./images/sprite-opt.svg#icon-footer-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-social-list">
               <a
                 href=""
                 aria-label=" Ссылка на Facebook"
                 class="footerSocialLinks"
-                >Facebook</a
-              >
+                ><svg class="footer-icons" width="20" height="20">
+                  <use
+                    href="./images/sprite-opt.svg#icon-footer-facebook"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-social-list">
               <a
                 href=""
                 aria-label=" Ссылка на LinkedIn"
                 class="footerSocialLinks"
-                >LinkedIn</a
-              >
+                ><svg class="footer-icons" width="20" height="20">
+                  <use
+                    href="./images/sprite-opt.svg#icon-footer-linkedin"
+                  ></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
