--- a/portfolio.html
+++ b/portfolio.html
@@ -48,17 +48,19 @@
               <a
                 href="mailto:info@devstudio.com"
                 class="contacts nav-font hover-text"
-                ><img
-                  src="./images/envelope.svg"
-                  alt="e-mail"
-                />info@devstudio.com</a
-              >
+                ><svg class="decoration">
+                  <use href="./images/sprite-opt.svg#icon-envelope"></use>
+                </svg>
+                <span>info@devstudio.com</span>
+              </a>
             </li>
             <li>
               <a href="tel:+380961111111" class="contacts nav-font hover-text"
-                ><img src="./images/phone.svg" alt="mobile" />+38 096 111 11
-                11</a
-              >
+                ><svg class="decoration">
+                  <use href="./images/sprite-opt.svg#icon-smartphone"></use>
+                </svg>
+                <span>+38 096 111 11 11</span>
+              </a>
             </li>
           </ul>
         </div>
@@ -264,32 +266,46 @@
                 href=""
                 aria-label=" Ссылка на Instagram"
                 class="footerSocialLinks"
-                >Instagram</a
-              >
+                ><svg class="footer-icons" width="20" height="20">
+                  <use
+                    href="./images/sprite-opt.svg#icon-footer-instagram"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-social-list">
               <a
                 href=""
                 aria-label=" Ссылка на Twitter"
                 class="footerSocialLinks"
-                >Twitter</a
-              >
+                ><svg class="footer-icons" width="20" height="20">
+                  <use href="./images/sprite-opt.svg#icon-footer-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-social-list">
               <a
                 href=""
                 aria-label=" Ссылка на Facebook"
                 class="footerSocialLinks"
-                >Facebook</a
-              >
+                ><svg class="footer-icons" width="20" height="20">
+                  <use
+                    href="./images/sprite-opt.svg#icon-footer-facebook"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-social-list">
               <a
                 href=""
                 aria-label=" Ссылка на LinkedIn"
                 class="footerSocialLinks"
-                >LinkedIn</a
-              >
+                ><svg class="footer-icons" width="20" height="20">
+                  <use
+                    href="./images/sprite-opt.svg#icon-footer-linkedin"
+                  ></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -304,7 +320,8 @@
               name="e-mail"
               class="input-email focus-text"
             />
-            <button class="button">Подписаться</button>
+            <!-- <button class="button">Подписаться</button> -->
+            <a href="" class="button focus-text">Подписаться</a>
           </form>
         </div>
       </div>
