Add элемент  Current page в навигации

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,9 @@
                 >
               </li>
               <li class="nav-list">
-                <a href="./portfolio.html" class="logo nav-font hover-text"
+                <a
+                  href="./portfolio.html"
+                  class="logo nav-font current hover-text"
                   >Портфолио</a
                 >
               </li>
