--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav>
           <ul class="header-menu">
             <li class="nav-list">
-              <a href="" class="logo nav-font hover-text">Студия</a>
+              <a href="" class="logo nav-font hover-text current">Студия</a>
             </li>
             <li class="nav-list">
               <a href="./portfolio.html" class="logo nav-font hover-text"
