Add focus на buttone и иконки футера

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     aria-label="Ссылка на Instagram"
                     class="social-links"
                   >
-                    <svg class="team-links" width="44px" height="44px">
+                    <svg class="team-links" width="44" height="44">
                       <use
                         href="./images/sprite-opt.svg#icon-team-instagram"
                       ></use>
@@ -566,7 +566,7 @@
               class="input-email focus-text"
             />
             <!-- <button class="button">Подписаться</button> -->
-            <a href="" class="button focus-text">Подписаться</a>
+            <a href="" class="button">Подписаться</a>
           </form>
         </div>
       </div>
