Add hover карточке с работами

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,17 @@
           </div> -->
           <ul class="works-exampl-ul">
             <li class="work-list">
+              <div class="hidden-box">
+                <p class="card-hideText">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <div class="card-content">
+                  <h3 class="logo title">Технокряк</h3>
+                  <p class="work-type">Веб-сайт</p>
+                </div>
+              </div>
               <div class="card">
                 <a href="" class="examples">
                   <img
