--- a/portfolio.html
+++ b/portfolio.html
@@ -80,8 +80,6 @@
           </ul>
 
           <!-- Примеры работ с фото -->
-          <!-- <div class="works-box">
-          </div> -->
           <ul class="works-exampl-ul">
             <li class="work-list">
               <div class="hidden-box">
@@ -90,10 +88,7 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p>
-                <div class="card-content">
-                  <h3 class="logo title">Технокряк</h3>
-                  <p class="work-type">Веб-сайт</p>
-                </div>
+                <div class="hidden-opacityBox"></div>
               </div>
               <div class="card">
                 <a href="" class="examples">
