Add анимация ховеру соцсетям Нашей команды

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,6 +105,14 @@
               </div>
             </li>
             <li class="work-list">
+              <div class="hidden-box">
+                <p class="card-hideText">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <div class="hidden-opacityBox"></div>
+              </div>
               <div class="card">
                 <a href="" class="examples"
                   ><img
@@ -120,6 +128,14 @@
               </div>
             </li>
             <li class="work-list">
+              <div class="hidden-box">
+                <p class="card-hideText">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <div class="hidden-opacityBox"></div>
+              </div>
               <div class="card">
                 <a href="" class="examples"
                   ><img
@@ -135,6 +151,14 @@
               </div>
             </li>
             <li class="work-list">
+              <div class="hidden-box">
+                <p class="card-hideText">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <div class="hidden-opacityBox"></div>
+              </div>
               <div class="card">
                 <a href="" class="examples">
                   <img
@@ -150,6 +174,14 @@
               </div>
             </li>
             <li class="work-list">
+              <div class="hidden-box">
+                <p class="card-hideText">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <div class="hidden-opacityBox"></div>
+              </div>
               <div class="card">
                 <a href="" class="examples">
                   <img
@@ -165,6 +197,14 @@
               </div>
             </li>
             <li class="work-list">
+              <div class="hidden-box">
+                <p class="card-hideText">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <div class="hidden-opacityBox"></div>
+              </div>
               <div class="card">
                 <a href="" class="examples">
                   <img
@@ -180,6 +220,14 @@
               </div>
             </li>
             <li class="work-list">
+              <div class="hidden-box">
+                <p class="card-hideText">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <div class="hidden-opacityBox"></div>
+              </div>
               <div class="card">
                 <a href="" class="examples">
                   <img
@@ -195,6 +243,14 @@
               </div>
             </li>
             <li class="work-list">
+              <div class="hidden-box">
+                <p class="card-hideText">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <div class="hidden-opacityBox"></div>
+              </div>
               <div class="card">
                 <a href="" class="examples">
                   <img
@@ -210,6 +266,14 @@
               </div>
             </li>
             <li class="work-list">
+              <div class="hidden-box">
+                <p class="card-hideText">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                <div class="hidden-opacityBox"></div>
+              </div>
               <div class="card">
                 <a href="" class="examples">
                   <img
